--- a/pipelines.yml
+++ b/pipelines.yml
@@ -1,1 +1,101 @@
+template: true   # required for local templates
+valuesFilePath: ./values.yml
 
+resources:
+  - name: app_repo
+    type: GitRepo
+    configuration:
+      gitProvider: {{ .Values.gitProvider }}                      # <-- replace with your integration
+      path: {{ .Values.repoPath }}    # <-- replace with your repository name
+      branches:
+        include: master
+
+  - name: app_image
+    type: Image
+    configuration:
+      registry: {{ .Values.artifactory }}                                # <-- replace with your artifactory integration
+      sourceRepository: {{ .Values.sourceRepository }}               # <-- required if registry is Artifactory
+      imageName: {{ .Values.imageName }}  # < -- replace with your image path and name
+      imageTag: latest
+      autoPull: true
+
+  - name: app_buildinfo
+    type: BuildInfo
+    configuration:
+      sourceArtifactory: {{ .Values.artifactory }}
+
+  - name: app_promoted_buildinfo
+    type: BuildInfo
+    configuration:
+      sourceArtifactory: {{ .Values.artifactory }}
+
+pipelines:
+  - name: app_dev_pipeline
+    steps:
+      - name: app_build
+        type: DockerBuild
+        configuration:
+          affinityGroup: docker_group
+          dockerFileLocation: .
+          dockerFileName: Dockerfile
+          dockerImageName: {{ .Values.imageName }}  # replace with your image path and name
+          dockerImageTag: ${run_number}
+          inputResources:
+            - name: app_repo
+          integrations:
+            - name: {{ .Values.artifactory }}                            # <-- replace with your artifactory integration
+
+      - name: app_push
+        type: DockerPush
+        configuration:
+          affinityGroup: docker_group
+          targetRepository: {{ .Values.sourceRepository }}
+          integrations:
+            - name: {{ .Values.artifactory }}                            # <-- replace with your artifactory integration
+          inputSteps:
+            - name: app_build
+          outputResources:
+            - name: app_image
+
+      - name: publish_app_build
+        type: PublishBuildInfo
+        configuration:
+          affinityGroup: docker_group
+          inputSteps:
+            - name: app_push
+          outputResources:
+            - name: app_buildinfo
+
+  - name: app_prod_pipeline
+    steps:
+      - name: app_promote_build
+        type: PromoteBuild
+        configuration:
+          #failOnValidate: true
+          #copy: true
+          targetRepository: {{ .Values.prodRepository }}
+          comment: "promoted via pipeline ${pipeline_name} in run number ${run_number}"
+          inputResources:
+            - name: app_buildinfo
+              trigger: false
+          outputResources:
+            - name: app_promoted_buildinfo
+
+      - name: app_deploy
+        type: Bash
+        configuration:
+          integrations:
+            - name: {{ .Values.artifactory }}
+          inputResources:
+            - name: app_promoted_buildinfo
+            - name: app_image
+              trigger: false
+        execution:
+          onStart:
+            - jfrog rt docker-pull $res_app_image_imageName:$res_app_image_imageTag {{ .Values.prodRepository }}
+            #- jfrog rt dl prod-go-local/app
+            #- ls -latr
+          onExecute:
+            - docker run $res_app_image_imageName:$res_app_image_imageTag
+            #- chmod +x app
+            #- ./app
