--- a/values.yml
+++ b/values.yml
@@ -1,6 +1,7 @@
-gitProvider: github_int
-repoPath: manishas-jfrog/go_app
-imageName: swampup204.jfrog.io/su204-docker-staging-local/app_image
-artifactory: artifactory_int
+gitIntegration: github_int
+gitRepositoryPath: manishas-jfrog/go_app
+artifactoryIntegration: artifactory_int
+imageName: app_image
+artifactoryUrl: swampup204.jfrog.io
 sourceRepository: su204-docker-staging-local
 prodRepository: su204-docker-prod-local
