--- a/pipelines.yml
+++ b/pipelines.yml
@@ -10,12 +10,12 @@ resources:
       branches:
         include: master
 
-  - name: app_dockerimage
+  - name: app_img
     type: Image
     configuration:
       registry: {{ .Values.artifactoryIntegration }}                                # <-- replace with your artifactory integration
       sourceRepository: {{ .Values.sourceRepository }}               # <-- required if registry is Artifactory
-      imageName: {{ .Values.artifactoryUrl }}.{{ .Values.sourceRepository }}/{{ .Values.imageName }}  # < -- replace with your image path and name
+      imageName: {{ .Values.artifactoryUrl }}/{{ .Values.sourceRepository }}/{{ .Values.imageName }}  # < -- replace with your image path and name
       imageTag: latest
       autoPull: true
 
@@ -55,7 +55,7 @@ pipelines:
           inputSteps:
             - name: app_build
           outputResources:
-            - name: app_dockerimage
+            - name: app_img
 
       - name: publish_app_build
         type: PublishBuildInfo
@@ -88,14 +88,14 @@ pipelines:
             - name: {{ .Values.artifactoryIntegration }}
           inputResources:
             - name: app_promoted_buildinfo
-            - name: app_dockerimage
+            - name: app_img
               trigger: false
         execution:
           onStart:
-            - jfrog rt docker-pull {{ .Values.artifactoryUrl }}.{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_dockerimage_imageTag {{ .Values.prodRepository }}
+            - jfrog rt docker-pull {{ .Values.artifactoryUrl }}/{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_img_imageTag {{ .Values.prodRepository }}
             #- jfrog rt dl prod-go-local/app
             #- ls -latr
           onExecute:
-            - docker run {{ .Values.artifactoryUrl }}.{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_dockerimage_imageTag
+            - docker run {{ .Values.artifactoryUrl }}.{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_img_imageTag
             #- chmod +x app
             #- ./app
