--- a/pipelines.yml
+++ b/pipelines.yml
@@ -10,14 +10,14 @@ resources:
       branches:
         include: master
 
-  - name: app_docker_img
-    type: Image
-    configuration:
-      registry: {{ .Values.artifactoryIntegration }}                                # <-- replace with your artifactory integration
-      sourceRepository: {{ .Values.sourceRepository }}               # <-- required if registry is Artifactory
-      imageName: {{ .Values.artifactoryUrl }}/{{ .Values.sourceRepository }}/{{ .Values.imageName }}  # < -- replace with your image path and name
-      imageTag: latest
-      autoPull: false
+  # - name: app_docker_img
+  #   type: Image
+  #   configuration:
+  #     registry: {{ .Values.artifactoryIntegration }}                                # <-- replace with your artifactory integration
+  #     sourceRepository: {{ .Values.sourceRepository }}               # <-- required if registry is Artifactory
+  #     imageName: {{ .Values.artifactoryUrl }}/{{ .Values.sourceRepository }}/{{ .Values.imageName }}  # < -- replace with your image path and name
+  #     imageTag: latest
+  #     autoPull: false
 
   - name: app_buildinfo
     type: BuildInfo
@@ -54,8 +54,6 @@ pipelines:
             - name: {{ .Values.artifactoryIntegration }}                            # <-- replace with your artifactory integration
           inputSteps:
             - name: app_build
-          outputResources:
-            - name: app_docker_img
 
       - name: publish_app_build
         type: PublishBuildInfo
@@ -88,14 +86,13 @@ pipelines:
             - name: {{ .Values.artifactoryIntegration }}
           inputResources:
             - name: app_promoted_buildinfo
-            - name: app_docker_img
               trigger: false
         execution:
           onStart:
-            - jfrog rt docker-pull {{ .Values.artifactoryUrl }}/{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_docker_img_imageTag {{ .Values.prodRepository }}
+            - jfrog rt docker-pull {{ .Values.artifactoryUrl }}/{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_promoted_buildinfo_buildNumber {{ .Values.prodRepository }}
             #- jfrog rt dl prod-go-local/app
             #- ls -latr
           onExecute:
-            - docker run {{ .Values.artifactoryUrl }}/{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_docker_img_imageTag
+            - docker run {{ .Values.artifactoryUrl }}/{{ .Values.prodRepository }}/{{ .Values.imageName }}:$res_app_promoted_buildinfo_buildNumber
             #- chmod +x app
             #- ./app
